fixed uneven nav anchor tags

--- a/navbar.css
+++ b/navbar.css
@@ -1,12 +1,9 @@
 nav {
     background: transparent;
-    /* position: fixed;
     top: 0;
-    right: 0; */
-    /* height: 70px; */
+    right: 0; 
     height: 19%;
     width: 100%;
-    /* padding-bottom: 1.5em; */
     flex: 1;
     display: flex;
     justify-content: space-between;
@@ -29,10 +26,7 @@ nav {
 /* home topics */
 .topic-outer{
     width: 100%;
-    /* height: 8.5%; */
     background-color: white;
-    /* position: fixed; */
-    /* top: 10%; */
     flex: 0.75;
     position: relative;
     bottom: 0;
@@ -47,16 +41,23 @@ nav {
     bottom: 0;
     right: 2%;
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
     text-align: center;
     border-bottom: 1.5px solid black;
     background-color: white;
 }
 
+a{
+    text-decoration: none;
+}
+
+.topic-parent a{
+    flex: 1;
+}
+
 #topic-child{
     font-weight: 500;
     color: black;
-    flex: 1;
 }
 
 .burger {
